Fixed current endpoint not returning data (#14)
