# backend/docs/swagger.json
@@ -47,7 +47,10 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/data.Response"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Measurement"
+                            }
                         }
                     }
                 }
@@ -76,10 +79,8 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/data.Response"
-                        }
+                        "description": "null response",
+                        "schema": {}
                     }
                 }
             }
@@ -124,7 +125,10 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/data.Response"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.City"
+                            }
                         }
                     }
                 }
@@ -179,21 +183,12 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Successful response with a list of cities",
+                        "description": "OK",
                         "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/data.Response"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "type": "object"
-                                        }
-                                    }
-                                }
-                            ]
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Measurement"
+                            }
                         }
                     }
                 }
@@ -201,14 +196,92 @@
         }
     },
     "definitions": {
-        "data.Response": {
+        "model.City": {
             "type": "object",
             "properties": {
-                "code": {
+                "country": {
+                    "type": "string"
+                },
+                "find_name": {
+                    "type": "string"
+                },
+                "id": {
                     "type": "integer"
                 },
-                "data": {},
-                "status": {
+                "latitude": {
+                    "type": "number"
+                },
+                "longitude": {
+                    "type": "number"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.Measurement": {
+            "type": "object",
+            "properties": {
+                "city_id": {
+                    "type": "integer"
+                },
+                "ground_level": {
+                    "type": "number"
+                },
+                "humidity": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "max_temperature": {
+                    "type": "number"
+                },
+                "min_temperature": {
+                    "type": "number"
+                },
+                "pressure": {
+                    "type": "number"
+                },
+                "rain_intensity": {
+                    "type": "number"
+                },
+                "sea_level": {
+                    "type": "number"
+                },
+                "temperature": {
+                    "type": "number"
+                },
+                "timestamp": {
+                    "type": "string"
+                },
+                "weather": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.MeasurementWeather"
+                    }
+                },
+                "wind_degrees": {
+                    "type": "number"
+                },
+                "wind_speed": {
+                    "type": "number"
+                }
+            }
+        },
+        "model.MeasurementWeather": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "icon": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "main": {
                     "type": "string"
                 }
             }
